2006-05-09  David Reveman  <davidr@novell.com>

	* plugins/switcher.c (switchPaintThumb): Rearrange code so we handle
	the case when bindWindow fails.

	* src/paint.c (paintWindow): Bail out if window is not mapped.

	* src/window.c (bindWindow): Make sure window is mapped when
	getting the window pixmap. (bnc 173248)

	* plugins/compiz.schemas.in.in: Regen.

	* plugins/cube.c (CUBE_MIPMAP_DEFAULT): Enable by default as
	performance seem to be OK now when new mipmaps are only generated
	when necessary.

	* src/texture.c (enableTexture): Don't generate new mipmaps
	every time the texture is used.

2006-05-08  David Reveman  <davidr@novell.com>

	* plugins/switcher.c: Allow switcher to be initiated with prev
	bindings. (Quinn Storm)

2006-05-07  David Reveman  <davidr@novell.com>

	* plugins/compiz.schemas.in.in: Regen.

	* plugins/switcher.c: Add icon support, minimized windows support
	and allow switcher to show up when only one selectable window exist.

	* images/Makefile.am: Add default icon image.

	* include/compiz.h:
	* src/texture.c:
	* src/event.c (handleEvent):
	* src/screen.c:
	* src/display.c:
	* src/window.c: Add WM icon interface.

	* gnome/window-decorator/gnome-window-decorator.c: Compute
	switcher title text width correctly.

	* src/event.c (handleEvent): Insert windows correctly when
	reparenting.

2006-05-07  Dan Winship  <danw@novell.com>

	* configure.ac: Add --with-scale-corner option and make
	compiz.schemas reflect it; the best corner to use depends on where
	the panels are and what's on them, so distros will want to
	override this to match their default panel layout.

	* src/event.c (eventMatches): Fix the the "water plugin gets
	mysteriously activated when activating some other keybinding" bug.

2006-05-05  Dan Winship  <danw@novell.com>

	* Makefile.am: 
	* autogen.sh:
	* configure.ac: require intltool for option-description
	translation

	* plugins/Makefile.am: translate compiz.schemas.in into
	compiz.schemas
